finaly fix mistake